<resources>
    <string name="app_name">Detak Jantungku</string>
    <string name="article_heading1">Detak Jantung Terlalu Cepat</string>
    <string name="article_subtitle1">Tips dan Trik</string>
    <string name="article_text1">
        <ol>
        <p style="text-align: justify;">Detak jantung Anda seringkali terlalu cepat? Inilah kondisi yang dinamakan dengan palpitasi di mana biasanya akan terjadi detak jantung yang tidak teratur, terkadang bisa cepat sekali, tapi juga kadang bisa lambat sekali. Perlu diketahui bahwa detak jantung normal manusia per menitnya adalah antara 60-100 detak sehingga memang kurang membuat nyaman. Lalu, bagaimanakah cara menormalkan detak jantung cepat?\n</p>
        <li><b>Mengonsumsi Pisang\n</b></li>
        <p style="text-align: justify;">Konsumsi pisang bukan hanya menjadi cara membakar lemak di perut saja, tapi pisang juga berguna untuk yang mengalami palpitasi. Buah yang kaya akan kalium ini bisa menyehatkan jantung Anda bila dikonsumsi setiap hari agar detak jantung bisa normal kembali.\n</p>
        <li><b>Latihan Pernapasan\n</b></li>
        <p style="text-align: justify;">Ketika merasakan detak jantung yang terlalu cepat atau palpitasi, ada beberapa langkah latihan pernapasan yang bisa dilakukan demi menormalkannya kembali. Untuk merilekskan tubuh serta melancarkan suplai oksigen cukup ke tubuh, Anda bisa melakukan:\n</p>
        <p style="text-align: justify;">- Duduk dengan posisi bersila, tapi pastikan tetap santai dan rileks.\n</p>
        <p style="text-align: justify;">- Ambil napas dalam-dalam dan perlahan melalui hidung sampai perut menggembung, baru kemudian hembuskan.\n</p>
        <p style="text-align: justify;">- Ulangi proses ini beberapa kali sampai detak jantung mulai kembali normal.\n</p>
        <p style="text-align: justify;">Cara-cara tersebut sangat baik dan bisa diandalkan terutama ketika detak jantung terlalu cepat akibat panik. Namun bagi penderita penyakit jantung serius, sebaiknya juga konsultasikan lebih dulu dengan dokter tentang latihan ini.\n</p>
        <li><b>Menggunakan Kayu Manis\n</b></li>
        <p style="text-align: justify;">Kayu manis mampu menyembuhkan masalah jantung, termasuk menormalkan kembali detak jantung yang cepat alias palpitasi. Mineral kalium dan mangan di dalamnya bisa menjadikan jantung Anda selalu sehat. Cukup tambahkan saja sesendok teh kayu manis bubuk ke segelas air hangat untuk Anda konsumsi setiap hari secara rutin.\n</p>
        <li><b>Batuk Sengaja \n</b></li>
        <p style="text-align: justify;">Membatukkan diri akan cukup membantu ketika detak jantung sedang tidak normal, baik itu terlalu cepat atau lambat. Membatukkan diri ini akan menyebabkan penumpukan tekanan pada dada yang kemudian mampu menjadi pemicu detak jantung yang normal kembali. Ini bukan langkah pencegahan, jadi hanya bisa dilakukan ketika memang detak jantung sedang tak teratur.\n</p>
        <li><b>Menggunakan Minyak Ikan\n</b></li>
        <p style="text-align: justify;">Minyak ikan kita tahu merupakan makanan yang mengandung omega-3 tinggi di mana khasiatnya sangat baik dalam menjaga kesehatan hati. Masukkan ke dalam menu diet Anda dan cobalah mengonsumsinya secara rutin. Namun sebaiknya tidak mengonsumsi minyak ikan apabila Anda justru mengalami detak jantung abnormal setelah mengonsumsi makanan beromega-3.\n</p>
        <li><b>Mengonsumsi Bawang Putih\n</b></li>
        <p style="text-align: justify;">Tidak salah lagi, bawang putih merupakan salah satu jenis makanan yang baik untuk jantung, bahkan mampu mengatasi penyumbatan pembuluh darah. Terlepas dari efek samping bawang putih, Anda bisa mengonsumsinya untuk menurunkan darah tinggi maupun kolesterol tinggi, bahkan juga menormalkan detak jantung.\n</p>
        <li><b>Minum Teh Kamomil\n</b></li>
        <p style="text-align: justify;">Supaya detak jantung cepat bisa normal dan rileks kembali, Anda dapat mengonsumsi teh kamomil. Teh kamomil ini sangat cocok dikonsumsi sebagai cara menghindari stres juga. Herbal satu ini memberikan juga manfaat kesehatan lainnya yang sangat luar biasa, namun tak dianjurkan bagi ibu hamil.\n</p>
        <li><b>Memakai Minyak Lavender\n</b></li>
        <p style="text-align: justify;">Menormalkan detak jantung selalu dapat dilakukan dengan cara-cara dan bahan yang alami, salah satunya adalah dengan penggunaan lavender. Minyak lavender dapat diteteskan ke air mandi Anda untuk menenangkan serta merilekskan detak jantung. Bahkan minyak lavender juga terpercaya dalam melancarkan peredaran darah sehingga manfaat yang didapat benar-benar beragam.\n</p>
        <li><b>Menggunakan Minyak Rosemary\n</b></li>
        <p style="text-align: justify;">Minyak rosemary sama fungsinya dengan minyak lavender di mana mampu membantu agar detak jantung yang terlalu cepat atau tak teratur bisa kembali normal. Anda bisa mencampurkan minyak mint dan minyak rosemary dengan perbandingan 1:1 untuk dioles dan dipijatkan ke kulit untuk memperlambat detak jantung sekaligus meringankan nyeri di dada kalau terjadi.\n</p>
        <li><b>Menggunakan Passionflower\n</b></li>
        <p style="text-align: justify;">Dalam menormalkan detak jantung, Anda juga dapat memakai passionflower, yakni sebuah jenis herbal yang mampu merilekskan jantung akibat serangan panik atau kegugupan. Tak hanya jantung, biasanya tanaman ini pun dapat digunakan untuk menenangkan bagian saraf otak. Hanya saja, urungkan niat menggunakannya kalau Anda tengah mengonsumsi obat lain.\n</p>
        <li><b>Memakai Ginkgo Biloba\n</b></li>
        <p style="text-align: justify;">Ekstrak herbal ginkgo biloba mampu melindungi jantung dari segala masalah kesehatan, termasuk juga kondisi palpitasi. Ini karena ginkgo biloba telah terbukti dapat merilekskan pembuluh darah dan meningkatkan peredaran darah saat palpitasi terjadi. Karena terdapat efek samping, ada baiknya Anda mengonsumsi setelah berkonsultasi dengan dokter.\n</p>
        <li><b>Menggunakan Peppermint\n</b></li>
        <p style="text-align: justify;">Peppermint kerap digunakan sebagai obat herbal bagi yang menderita asam lambung, namun peppermint juga dapat meningkakan sirkulasi darah sekaligus memperkuat otot jantung. Minumlah secangkir teh peppermint setiap hari, tapi sebaiknya hindari kalau sedang hamil. Cukup didihkan beberapa daun mint segar di dalam air biasa selama 5 menit.\n</p>
        <li><b>Minum Banyak Air Putih\n</b></li>
        <p style="text-align: justify;">Untuk menormalkan detak jantung, Anda juga bisa minum banyak air putih. Tetap biarkan tubuh terhidrasi dengan baik dan jauhi bahaya dehidrasi sebab dehidrasi mampu menjadi pemicu palpitasi atau detak jantung tak beraturan. Maka dari itu, setiap harinya bisa Anda konsumsi 8-10 gelas air putih.\n</p>
        <li><b>Yoga\n</b></li>
        <p style="text-align: justify;">Untuk menyeimbangkan kesehatan fisik dan mental, Yoga adalah latihan fisik yang benar-benar terekomendasi. Yoga juga baik untuk mengatasi stres di mana stres sendiri mampu menyebabkan detak jantung tak normal sekaligus tekanan darah meningkat. Ambil waktu untuk mempelajari Yoga, baik sendiri atau ikut kelas agar Anda bisa belajar langsung dari instrukturnya.\n</p>
        <li><b>Meditasi\n</b></li>
        <p style="text-align: justify;">Selain Yoga, Anda pun dapat melakukan meditasi untuk membuat detak jantung normal kembali. Ingat bahwa meditasi adalah salah satu cara mengatasi stres efektif, dan stres masih termasuk di dalam penyebab terjadinya palpitasi. Untuk meditasi, silakan melakukannya selama 30 menit saja setiap hari supaya detak jantung normal dan kondisinya dapat lebih rileks.\n</p>
        <li><b>Menggunakan Lemon dan Madu\n</b></li>
        <p style="text-align: justify;">Ketika detak jantung serasa tak normal, Anda bisa menggunakan lemon sekaligus madu untuk menormalkannya kembali. Anda bisa mencampurkan sesendok teh madu murni ke secangkir air putih yang juga ditambah dengan air perasan lemon secukupnya. Minumlah setiap pagi sebelum Anda sarapan atau sebelum tidur.\n</p>
        <li><b>Berolahraga\n</b></li>
        <p style="text-align: justify;">Olahraga teratur juga menjadi kunci detak jantung yang normal, maka dari itu olahraga aerobik bisa Anda coba jalani seminggu 3-4 kali dengan pemanasan selama 10 menit lebih dulu. Ini kan meningkatkan kinerja jantung secara positif dan detaknya pun juga yang tadinya kurang normal dapat kembali normal.\n</p>
        <li><b>Meningkatkan Asupan Magnesium\n</b></li>
        <p style="text-align: justify;">Asupan magnesium penting dalam mengembalikan kenormalan detak jantung. Kekurangan asupan magnesium mampu menjadikan jantung mudah mengalami palpitasi. Jadi, konsumsilah makanan-makanan yang mengandung magnesium seperti halnya sayur-sayuran berwarna hijau gelap, kacang-kacangan (terlebih almond), quinoa, oatmeal, biji labu, pisang, alpukat, yogurt rendah lemak, coklat hitam, kale dan bayam.\n</p>
        <p style="text-align: justify;">Sumber: https://halosehat.com/diet-fitness/tips-diet/cara-membakar-lemak \n</p>
        </ol>
    </string>
    <string name="article_heading2">Detak Jantung Terlalu Lambat</string>
    <string name="article_subtitle2">Tips dan Trik</string>
    <string name="article_text2">
        <ol>
        <li><b>Berolahraga Ringan 30 Menit\n</b></li>
        <p style="text-align: justify;">Rajin berolahraga adalah cara tepat memulihkan lemah jantung. Seperti melakukan senam aerobik yang akan meningkatkan detak jantung dan menurunkan tekanan darah atau melakukan olahraga mudah lainnya seperti jalan kaki, berkebun, naik sepeda, dan berenang.\n</p>
        <li><b>Berhenti Merokok\n</b></li>
        <p style="text-align: justify;">Rokok adalah musuh terbesar jantung. Menghisap rokok secara terus-menerus sama seperti dengan memasukkan racun ke dalam tubuh sendiri. Perlambatan atau pelemahan kerja jantung termasuk salah satu akibat dari asap rokok yang terus-menerus masuk ke dalam tubuh.\n</p>
        <li><b>Menurunkan Berat Badan\n</b></li>
        <p style="text-align: justify;">Memiliki berat badan normal juga membantu memperkuat lemah jantung. Berat badan berlebih membuat organ-organ tubuh akan bekerja ekstra keras. Selain potensial mengakibatkan terjadinya serangan jantung, kelebihan berat badan juga akan memicu stroke, diabetes, dan tekanan darah tinggi.\n</p>
        <li><b>Mengurangi Lemak\n</b></li>
        <p style="text-align: justify;">Berhati-hatilah saat mengonsumsi daging yang mengandung lemak tinggi. Hal itu akan meningkatkan kadar kolesterol dalam tubuh dan menyebabkan terjadinya penimbunan lemak. Akibatnya, aliran darah menjadi tidak lancar dan membahayakan kesehatan jantung.\n</p>
        <li><b>Waspadai Penyakit yang Berhubungan dengan Jantung\n</b></li>
        <p style="text-align: justify;">Diabetes dan kelebihan kolesterol tinggi adalah faktor resiko terjadinya serangan jantung. Untuk itu, Anda wajib mewaspadai terjadinya kondisi buruk tersebut. Selalu menjaga kesehatan tubuh dan berkonsultasi dengan dokter merupakan cara untuk mengantisipasi kondisi yang tidak diinginkan tersebut.\n</p>
        <li><b>Batasi Konsumsi Makanan Pabrik dan Konsumsi Suplemen Herbal\n</b></li>
        <p style="text-align: justify;">Makanan dari pabrik seperti makanan kaleng biasanya mengandung lemak yang dapat mempengaruhi kesehatan prima jantung. Menghindari makanan buatan pabrik itu sangat dianjurkan untuk membuat jantung lemah Anda tidak bertambah parah.\n</p>
        <p style="text-align: justify">Sumber: https://www.deherba.com/6-cara-memperkuat-lemah-jantung.html \n</p>
        </ol>
    </string>
    <string name="article_heading3">Detak Jantung Normal</string>
    <string name="article_subtitle3">Tips dan Trik</string>
</resources>