<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/article_heading1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/article_heading1"
        android:textSize="12pt"
        android:textAppearance="@android:style/TextAppearance" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/article_heading1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/article_subheading1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/article_subtitle1"
                android:textSize="10pt"
                android:textAppearance="@android:style/TextAppearance" />

            <TextView
                android:id="@+id/article1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:textSize="8pt"
                android:text="@string/article_text1" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
